--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -19,17 +19,6 @@ jobs:
       JWT_RESET_PASSWORD_EXPIRATION_MINUTES: 10
       JWT_VERIFY_EMAIL_EXPIRATION_MINUTES: 10
 
-    services:
-      mongodb:
-        image: mongo
-        options: >-
-          --health-cmd mongo
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 27017:27017
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -37,7 +26,11 @@ jobs:
         node-version: [14.x]
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Start containers
+        run: docker-compose -f "docker-compose.test.yml" up -d --build
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
@@ -46,4 +39,10 @@ jobs:
 
       - name: Install dependencies
         run: yarn install --frozen-lockfile
-      - run: yarn test
+
+      - name: Run tests
+        run: yarn test
+
+      - name: Stop containers
+        if: always()
+        run: docker-compose -f "docker-compose.test.yml" down
