--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Start containers
-        run: docker-compose -f "docker-compose.test.yml" up -d --build
+        run: yarn docker:test
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
